--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "14.0.5",
     "@types/ws": "^8.5.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "tslint": "6.1.2",
     "typescript": "3.9.3"
